# raylib-cmake-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  b  bootstrap  bootstrap-angle  br  build-angle  cp-angle-dylibs  r
libs/: libEGL.dylib
src/: main.c  main.cpp
